--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:inputType="textEmailAddress"
         android:hint="@string/email_hint" >
     <requestFocus />
     </EditText>
@@ -25,11 +26,23 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="@string/password_hint"/>
+    <EditText
+        android:id="@+id/enter_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/name_hint"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_button_label" />
+    <Button
+        android:id="@+id/sign_up_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up_label"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/sign_up_text"
         android:layout_width="match_parent"
@@ -37,4 +50,5 @@
         android:layout_marginTop="@dimen/spacer"
         android:text="@string/sign_up_text"
         android:gravity="center" />
+
 </LinearLayout>
